--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           </div>
           <div class="flex-grow pl-4">
             <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Targeted Prospect Research</h2>
-            <p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+            <p class="leading-relaxed">Build lists of your ideal prospects, ensuring they are precisely targeted and qualified..</p>
           </div>
         </div>
         <div class="flex relative pb-12">
@@ -293,7 +293,7 @@
           </div>
           <div class="flex-grow pl-4">
             <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Personalized Email Crafting</h2>
-            <p class="leading-relaxed">Vice migas literally kitsch +1 pok pok. Truffaut hot chicken slow-carb health goth, vape typewriter.</p>
+            <p class="leading-relaxed">Write clear, hyper-personalized cold emails designed to maximize response rates..</p>
           </div>
         </div>
         <div class="flex relative pb-12">
@@ -308,7 +308,7 @@
           </div>
           <div class="flex-grow pl-4">
             <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Efficient Outreach Execution</h2>
-            <p class="leading-relaxed">Coloring book nar whal glossier master cleanse umami. Salvia +1 master cleanse blog taiyaki.</p>
+            <p class="leading-relaxed">Send custom emails to thousands of your ideal clients each month, ensuring your message reaches a broad yet focused audience.</p>
           </div>
         </div>
         <div class="flex relative pb-12">
@@ -322,8 +322,8 @@
             </svg>
           </div>
           <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 4</h2>
-            <p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Facilitate Deal Closure</h2>
+            <p class="leading-relaxed">Receive immediate notifications for meeting-ready leads, positioning you to close deals efficiently..</p>
           </div>
         </div>
         <div class="flex relative">
