--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="flex justify-center">
          <a href="#booking" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
           <button>
-            Book a call 
+            BOOK A CALL 
           </button>
          
          </a>
@@ -175,7 +175,7 @@
       <!-- Button Container -->
        <div class="flex justify-center">
   <a href="#booking" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
-    Book a call
+    GET STARTED
   </a>
 </div>
 
