--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   <!-- Footer Start -->
   <footer class="bg-lfoot dark:bg-dfoot body-font border-t border-dborder shadow-inner">
     <div
-      class="container px-5 py-2 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
+      class="container px-5 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
       <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
         <a class="flex title-font font-medium items-center md:justify-start justify-center ">
 
