--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
         <div class="p-4 md:w-1/3 flex flex-col text-center items-center">
           <div class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5 flex-shrink-0">
           
-         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
-</svg>
+         <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><defs><style>.a{fill:none;stroke:#000000;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="a" d="M37.31,15.93,12.24,41,5.5,42.5,7,35.76l.51-.51,28-28,.51-.51,1.76,1.76L38.33,8,40.79,5.5h0L42.5,7.21,40,9.68l-.52.51L41.28,12l-3,3,1.41,1.42,1.45,1.44-4.88,4.88m1.53-6.23"></path><line class="a" x1="37.81" y1="8.48" x2="39.52" y2="10.19"></line><line class="a" x1="38.31" y1="14.93" x2="37.31" y2="15.93"></line><line class="a" x1="7" y1="35.76" x2="12.24" y2="41"></line>
+         </g>
+         </svg>
             
           </div>
           <div class="flex-grow">
