--- a/index.html
+++ b/index.html
@@ -351,7 +351,12 @@
               <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
               <path d="M22 4L12 14.01l-3-3"></path>
             </svg>
-          </div>
+            </div>
+            <div class="flex-grow pl-4">
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Facilitate Deal Closure</h2>
+            <p class="leading-relaxed">Receive immediate notifications for meeting-ready leads, positioning you to close deals efficiently..</p>
+          </div>             
+
           
         </div>
       </div>
