--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 </svg>
           </div>
           <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Targeted Prospect Research</h2>
-            <p class="leading-relaxed">Build lists of your ideal prospects, ensuring they are precisely targeted and qualified..</p>
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Define Ideal Customer Profile</h2>
+            <p class="leading-relaxed">Build lists of your ideal prospects, </p>
           </div>
         </div>
         <div class="flex relative pb-12">
@@ -312,8 +312,8 @@
 </svg>
           </div>
           <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Personalized Email Crafting</h2>
-            <p class="leading-relaxed">Write clear, hyper-personalized cold emails designed to maximize response rates..</p>
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Targeted Prospect Research</h2>
+            <p class="leading-relaxed">Build lists of your ideal prospects, ensuring they are precisely targeted and qualified.</p>
           </div>
         </div>
         <div class="flex relative pb-12">
@@ -326,8 +326,8 @@
 </svg>
           </div>
           <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Efficient Outreach Execution</h2>
-            <p class="leading-relaxed">Send custom emails to thousands of your ideal clients each month, ensuring your message reaches a broad yet focused audience.</p>
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Personalized Email Crafting</h2>
+            <p class="leading-relaxed">Write clear, hyper-personalized cold emails designed to maximize response rates.</p>
           </div>
         </div>
         <div class="flex relative pb-12">
@@ -341,16 +341,16 @@
 
           </div>
           <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Facilitate Deal Closure</h2>
-            <p class="leading-relaxed">Receive immediate notifications for meeting-ready leads, positioning you to close deals efficiently..</p>
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Efficient Outreach Execution</h2>
+            <p class="leading-relaxed">Send custom emails to thousands of your ideal clients each month, ensuring your message reaches a broad yet focused audience.</p>
           </div>
         </div>
         <div class="flex relative">
           <div class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-              <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
-              <path d="M22 4L12 14.01l-3-3"></path>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
+</svg>
+
             </div>
             <div class="flex-grow pl-4">
             <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Facilitate Deal Closure</h2>
