--- a/index.html
+++ b/index.html
@@ -205,6 +205,17 @@
 <!-- Section3 START-->
   <section id="section3" class="text-gray-600 body-font">
     <div class="container px-5 py-2 mx-auto">
+
+<div class="text-center mb-20">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4">Why Choose Us for Your Cold Email Campaigns?</h1>
+        <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s">From countless B2B campaigns across diverse industries, we've gathered incredible insights. We use that to get your ideal decision-makers' attention and smoothly guide them right into your sales funnel.</p>
+        <div class="flex mt-6 justify-center">
+          <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
+        </div>
+      </div>
+
+
+      
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900">Unleashing the power of strategic email campaigns to generate revenue
         </h1>
