--- a/index.html
+++ b/index.html
@@ -207,20 +207,13 @@
     <div class="container px-5 py-2 mx-auto">
 
 <div class="text-center mb-20">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4">Why Choose Us for Your Cold Email Campaigns?</h1>
-        <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s">From countless B2B campaigns across diverse industries, we've gathered incredible insights. We use that to get your ideal decision-makers' attention and smoothly guide them right into your sales funnel.</p>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4">Unleashing the power of strategic email campaigns to generate revenue</h1>
+        <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s">Experience the power of expert-led cold email campaigns at an accessible cost. Our dedicated professionals use their expertise to build an outreach system that not only generates leads but also nurtures potential clients into long-term partners.</p>
         <div class="flex mt-6 justify-center">
           <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
         </div>
       </div>
 
-
-      
-      <div class="flex flex-col text-center w-full mb-20">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900">Unleashing the power of strategic email campaigns to generate revenue
-        </h1>
-         <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s">Experience the power of expert-led cold email campaigns at an accessible cost. Our dedicated professionals use their expertise to build an outreach system that not only generates leads but also nurtures potential clients into long-term partners.</p>
-      </div>
       <div class="flex flex-wrap -m-4">
         <div class="p-4 md:w-1/3">
           <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
