--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <header class="mb-8 flex items-center justify-between py-4 md:mb-12 md:py-8 xl:mb-16">
       <!-- logo - start -->
       <a href="/" class="inline-flex items-center gap-2.5 text-2xl font-bold text-black md:text-3xl" aria-label="logo">
-        <svg width="95" height="94" viewBox="0 0 95 94" class="h-auto w-6 text-indigo-500" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+       <svg width="95" height="94" viewBox="0 0 95 94" xmlns="http://www.w3.org/2000/svg">
+    <rect width="95" height="94" fill="red" />
+</svg>
+
           <path d="M95 0V47L47.5 94H0V47L47.5 0H95Z" />
         </svg>
 
